--- a/summer2015/eli/test_yourself.ipynb
+++ b/summer2015/eli/test_yourself.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "",
+  "name": "test_yourself",
   "signature": "sha256:699c199cd63c42b4b818caa0c2c0b063910fef00cb3ddd5ee9c4f45ef3fe93ef"
  },
  "nbformat": 3,
@@ -26,12 +26,24 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Your code here."
+      "J=0\n",
+      "for i in range(1,101):\n",
+      "    if i%3==0:\n",
+      "        J=J+i\n",
+      "print J"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1683\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -44,12 +56,32 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Your code here"
+      "k=[]\n",
+      "for i in range(1,101):\n",
+      "    if i==2:\n",
+      "        k.append(i)\n",
+      "    elif i%2==1:\n",
+      "        k.append(i)\n",
+      "        \n",
+      "\n",
+      "\n",
+      "\n",
+      "        \n",
+      "      \n",
+      "        "
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 2, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59, 61, 63, 65, 67, 69, 71, 73, 75, 77, 79, 81, 83, 85, 87, 89, 91, 93, 95, 97, 99]\n"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -116,12 +148,29 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Your code here"
+      "def thisisafunction(sent,let):\n",
+      "    a=sent.split()\n",
+      "    for i in range(0,len(a)):\n",
+      "        for j in range(0,\n",
+      "        if a[i==let:\n",
+      "            print a[i]\n",
+      "thisisafunction(\"hello there eli\",\"e\")\n",
+      "\n",
+      "\n",
+      "        \n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "e\n"
+       ]
+      }
+     ],
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
