--- a/summer2015/eli/Eli_Histogram_Test.ipynb
+++ b/summer2015/eli/Eli_Histogram_Test.ipynb
@@ -69,11 +69,10 @@
       "    tot_freq+=hist[0]\n",
       "    del a\n",
       "    del hist\n",
-      "    #print tot_freq\n",
+      "print tot_freq\n",
       "t1=time.time()\n",
       "tot=t1-t0\n",
-      "totmin=tot/60\n",
-      "print 'This code took %f minutes to run' %totmin\n",
+      "print 'This code took %f seconds to run' %tot\n",
       "    "
      ],
      "language": "python",
@@ -83,11 +82,26 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "This code took 28.693730 seconds to run\n"
+        "[  999449.   998836.  1000737.   997753.  1000751.  1000799.   999525.\n",
+        "  1000964.   997886.  1001343.   998562.   998461.   999295.  1000215.\n",
+        "   998973.   999641.   998383.   999078.   998642.   999004.  1000420.\n",
+        "  1001116.   999924.   999888.  1000623.  1000883.   999493.  1000130.\n",
+        "   999537.  1000493.   998880.  1000448.   997651.   999402.   997529.\n",
+        "   999646.   999708.  1000230.  1000924.   998359.  1000352.  1000386.\n",
+        "  1000565.   999955.   998695.  1000594.  1000980.  1000138.   999189.\n",
+        "  1001396.  1000333.  1000578.  1000891.   999246.  1000287.   999228.\n",
+        "   999805.  1001252.  1000480.  1000909.  1001775.   998564.  1000751.\n",
+        "   999379.  1000625.  1000107.  1001453.  1001001.  1000572.  1000017.\n",
+        "  1001638.  1000557.  1000350.   999985.   999722.   999225.  1001034.\n",
+        "  1001122.  1000187.   999612.  1000392.  1000879.   999259.  1000010.\n",
+        "   998436.  1000278.  1000482.   999270.  1001030.  1000553.   999168.\n",
+        "   999613.  1000559.   999860.  1001971.  1000253.  1000064.  1000352.\n",
+        "  1000772.  1000283.]\n",
+        "This code took 28.459699 seconds to run\n"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
