--- a/summer2015/eli/test_yourself.ipynb
+++ b/summer2015/eli/test_yourself.ipynb
@@ -94,12 +94,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Your code here"
+      "import time\n",
+      "import random\n",
+      "import math\n",
+      "import numpy as np\n",
+      "t0=time.time()\n",
+      "a=(2) * np.random.random_sample(100000) - 1\n",
+      "arcs=[]\n",
+      "for i in range(0,len(a)):\n",
+      "    ar=math.asin(i)\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -112,7 +120,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Your code here"
+      "import time\n",
+      "import random\n",
+      "import numpy as np\n",
+      "a=(2) * np.random.random_sample(100000) - 1"
      ],
      "language": "python",
      "metadata": {},
