fixed typo; checked in logo

--- a/advising/physics_bs_schedule.tex
+++ b/advising/physics_bs_schedule.tex
@@ -49,7 +49,7 @@ MATH~330: Intro to Applied Math I & 3 & MATH~230: Linear Algebra$^{5}$    & 3 \\
 History Core (CDH)                & 3 & Philosophy Core (CDP)             & 3 \\
 CHEM~110: General Chemistry I     & 4 & PHYS~370: Experimental Techniques & 2 \\
                                   &   & \hspace{0.5mm} \textbf{or} PHYS~380: Observational Astronomy & 3 \\
-                                  &   & \hspace{0.5mm} \textbf{or} Minor in Astrophysicsa     &  \\
+                                  &   & \hspace{0.5mm} \textbf{or} Minor in Astrophysics     &  \\
 
  & \\
 {\Large \textbf{Fall Year 4}} & & {\Large \textbf{Spring Year 4}} & \\
