--- a/advising/physics_astrominor_schedule.tex
+++ b/advising/physics_astrominor_schedule.tex
@@ -14,7 +14,7 @@
 \hfill \includegraphics[width=0.35\textwidth]{siena_phys_astro_print_crop.jpg}
 
 \vspace{0.1cm}
-\hspace{0.1in}{\Large \bf Physics BS$^{1}$ 4-Year Schedule}
+\hspace{0.1in}{\Large \bf Physics BS$^{1}$ (with Astrophysics Minor) 4-Year Schedule}
 \vspace{0.3cm}
 
 \vspace*{-5mm}
@@ -30,33 +30,34 @@
 PHYS~132: General Physics Review           & 0 & PHYS~142: General Physics Review & 0\\
 {\em MATH~110: Calculus I}\,$^{3}$         & 4 & {\em MATH~120: Calculus II}            & 4 \\
 FYSN~100: First-Year Seminar               & 3 & FYSN~101: First-Year Seminar     & 3\\
-CSIS~200: Software Tools for Physicists    & 3 & Creative Arts Core (CDE)         & 3 \\
+CSIS~200: Software Tools for Physicists    & 3 & ASTR~101: Introductory Astronomy for Scientists & 3 \\
 
  & \\
 {\Large \textbf{Fall Year 2}} & & {\Large \textbf{Spring Year 2}} & \\
 \hline
-{\em PHYS~220: Modern Physics}\,$^{4}$      & 4 & PHYS~260: Thermal Physics        & 3 \\
+{\em PHYS~220: Modern Physics}\,$^{4}$     & 4 & PHYS~260: Thermal Physics        & 3 \\
 {\em SCDV 230: Electronic Instrumentation} & 4 & {\em PHYS~250: Computational Physics} & 3  \\
 {\em MATH~210: Calculus III}               & 4 & MATH~325: Differential Equations & 3 \\
-English Core (CDA)                         & 3 & Religion Core (CDR)            & 3 \\
+ASTR~390: Principles of Astrophysics~I     & 3 & ASTR~392: Principles of Astrophysics~II  & 3 \\
                                            &   & Franciscan Diversity Core (CFD)  & 3 \\
 
  & \\
 {\Large \textbf{Fall Year 3}} & & {\Large \textbf{Spring Year 3}} & \\
 \hline
 {\em PHYS~310: Mechanics I}         & 4 & {\em PHYS~410: Electromagnetic Theory}  & 4 \\
-{\em CHEM~110: General Chemistry I} & 4 & {\em PHYS~370: Experimental Techniques}\,$^{5}$ & 2 \\
-MATH~330: Intro to Applied Math I   & 3 & MATH~230: Linear Algebra$^{6}$    & 3 \\
-History Core (CDH)                  & 3 & Philosophy Core (CDP)             & 3 \\
+{\em CHEM~110: General Chemistry I} & 4 & MATH~230: Linear Algebra$^{5}$    & 3 \\
+MATH~330: Intro to Applied Math I   & 3 & ASTR~332: Astrophysics Seminar~II$^{6}$     & 2 \\
+{\em ASTR~380: Observational Astronomy} & 3 & Philosophy Core (CDP)             & 3 \\
                                     &   & Social Justice Franciscan Core (CFJ) & 3 \\
- & \\
+
+& \\
 {\Large \textbf{Fall Year 4}} & & {\Large \textbf{Spring Year 4}} & \\
 \hline
 {\em PHYS~470: Advanced Lab I} & 1 & {\em PHYS~472: Advanced Lab II}  & 1 \\
 PHYS~440: Quantum Physics      & 3 & Physics Elective           & 3 \\
-Heritage Franciscan Core (CFH) & 3 & Social Science Core (CDS) & 3 \\
-Elective                       & 3 & Elective                  & 3 \\
-Elective                       & 3 & Elective                  & 3 \\
+Heritage Franciscan Core (CFH) & 3 & Social Science Core (CDS)  & 3 \\
+Creative Arts Core (CDA)       & 3 & Religion Core (CDR)        & 3 \\
+English Core (CDE)             & 3 & History Core (CDH)         & 3 \\
 \hline
 \end{tabular*}
 }
@@ -75,11 +76,10 @@ component (generally indicating a larger time commitment).
 \hspace{0.1in}$^{4}$Modern Physics satisfies the Natural World Franciscan Core
 (CFN) requirement.
 
-\hspace{0.1in}$^{5}$This requirement can be satisfied by taking {\em ASTR~380:
-  Observational Astronomy} (a 3-credit \hspace*{0.42in}course offered in the
-fall), or by completing the Astrophysics Minor.
-
-\hspace{0.1in}$^{6}$This sixth math class gives you a Mathematics Minor (which
+\hspace{0.1in}$^{5}$This sixth math class gives you a Mathematics Minor (which
 must be declared).
+
+\hspace{0.1in}$^{6}$Alternatively, ASTR~330: Astrophysics Seminar~I may be taken
+in the fall (if offered).
 
 \end{document}
