uploaded pdfs for the first time

--- a/advising/physics_threetwo_schedule.tex
+++ b/advising/physics_threetwo_schedule.tex
@@ -30,7 +30,8 @@
 PHYS~132: General Physics Review           & 0 & PHYS~142: General Physics Review & 0\\
 {\em MATH~110: Calculus I}\,$^{3}$         & 4 & {\em MATH~120: Calculus II}            & 4 \\
 FYSN~100: First-Year Seminar               & 3 & FYSN~101: First-Year Seminar     & 3\\
-CSIS~200: Software Tools for Physicists    & 3 & Creative Arts Core (CDE)         & 3 \\
+SCDV~020: Intro to Engineering             & 1 & Creative Arts Core (CDE)         & 3 \\
+CSIS~200: Software Tools for Physicists    & 3 & & \\
 
  & \\
 {\Large \textbf{Fall Year 2}} & & {\Large \textbf{Spring Year 2}} & \\
@@ -44,6 +45,7 @@ English Core (CDA)                         & 3 & Religion Core (CDR)            
  & \\
 {\Large \textbf{Fall Year 3}} & & {\Large \textbf{Spring Year 3}} & \\
 \hline
+{\em PHYS~470: Advanced Lab I} & 1 & {\em PHYS~472: Advanced Lab II}  & 1 \\
 {\em PHYS~310: Mechanics I}         & 4 & {\em PHYS~410: Electromagnetic Theory}  & 4 \\
 {\em CHEM~110: General Chemistry I} & 4 & {\em PHYS~370: Experimental Techniques}\,$^{5}$ & 2 \\
 MATH~330: Intro to Applied Math I   & 3 & MATH~230: Linear Algebra$^{6}$    & 3 \\
@@ -52,11 +54,9 @@ History Core (CDH)                  & 3 & Philosophy Core (CDP)             & 3 
  & \\
 {\Large \textbf{Fall Year 4}} & & {\Large \textbf{Spring Year 4}} & \\
 \hline
-{\em PHYS~470: Advanced Lab I} & 1 & {\em PHYS~472: Advanced Lab II}  & 1 \\
-PHYS~440: Quantum Physics      & 3 & Physics Elective           & 3 \\
-Heritage Franciscan Core (CFH) & 3 & Social Science Core (CDS) & 3 \\
-Elective                       & 3 & Elective                  & 3 \\
-Elective                       & 3 & Elective                  & 3 \\
+PHYS~440: Quantum Physics      & 3 & Social Science Core (CDS) & 3 \\
+Heritage Franciscan Core (CFH) & 3 & Courses at Engineering School &  \\
+Courses at Engineering School  &   &  & \\
 \hline
 \end{tabular*}
 }
