--- a/advising/physics_threetwo_schedule.tex
+++ b/advising/physics_threetwo_schedule.tex
@@ -15,7 +15,7 @@
 
 \vspace{0.1cm}
 \hspace{0.1in}{\Large \bf Physics BS$^{1}$ (Three/Two Engineering) 5-Year Schedule}
-\vspace{0.3cm}
+\vspace{0.1cm}
 
 \vspace*{-5mm}
 \begin{table}[h!]
@@ -31,7 +31,7 @@ PHYS~132: General Physics Review           & 0 & PHYS~142: General Physics Revie
 {\em MATH~110: Calculus I}\,$^{3}$         & 4 & {\em MATH~120: Calculus II}            & 4 \\
 FYSN~100: First-Year Seminar               & 3 & FYSN~101: First-Year Seminar     & 3\\
 SCDV~020: Intro to Engineering             & 1 & Creative Arts Core (CDE)         & 3 \\
-CSIS~200: Software Tools for Physicists    & 3 & & \\
+CSIS~200: Software Tools for Physicists    & 3 & Social Science Core (CDS) & 3 \\
 
  & \\
 {\Large \textbf{Fall Year 2}} & & {\Large \textbf{Spring Year 2}} & \\
@@ -47,17 +47,18 @@ English Core (CDA)                         & 3 & Religion Core (CDR)            
 \hline
 {\em PHYS~470: Advanced Lab I} & 1 & {\em PHYS~472: Advanced Lab II}  & 1 \\
 {\em PHYS~310: Mechanics I}         & 4 & {\em PHYS~410: Electromagnetic Theory}  & 4 \\
-{\em CHEM~110: General Chemistry I} & 4 & {\em PHYS~370: Experimental Techniques}\,$^{5}$ & 2 \\
-MATH~330: Intro to Applied Math I   & 3 & MATH~230: Linear Algebra$^{6}$    & 3 \\
-History Core (CDH)                  & 3 & Philosophy Core (CDP)             & 3 \\
-                                    &   & Social Justice Franciscan Core (CFJ) & 3 \\
+{\em CHEM~110: General Chemistry I} & 4 & MATH~230: Linear Algebra$^{6}$    & 3 \\
+MATH~330: Intro to Applied Math I   & 3 & Philosophy Core (CDP)             & 3 \\
+History Core (CDH)                  & 3 & Social Justice Franciscan Core (CFJ) & 3 \\
+                                    &   & Heritage Franciscan Core (CFH) & 3 \\
  & \\
 {\Large \textbf{Fall Year 4}} & & {\Large \textbf{Spring Year 4}} & \\
 \hline
-PHYS~440: Quantum Physics      & 3 & Social Science Core (CDS) & 3 \\
-Heritage Franciscan Core (CFH) & 3 & Courses at Engineering School &  \\
-Courses at Engineering School  &   &  & \\
+Courses at Engineering School  &   & Courses at Engineering School &  \\
+ & \\
+{\Large \textbf{Fall Year 5}} & & {\Large \textbf{Spring Year 5}} & \\
 \hline
+Courses at Engineering School  &   & Courses at Engineering School &  \\
 \end{tabular*}
 }
 \end{center}
