added 4-1 FAQ and computational science major

--- a/advising/computational_science_bs_schedule.tex
+++ b/advising/computational_science_bs_schedule.tex
@@ -13,7 +13,7 @@
 \begin{document}
 \hfill 
 
-\includegraphics[width=0.35\textwidth]{siena.jpg}
+\includegraphics[width=0.35\textwidth]{siena_phys_astro_print_crop.jpg}
 
 \vspace{0.1cm}
 \hspace{0.1in}{\Large \bf Computational Science BS$^{1}$ -  4 Years}
