--- a/advising/faq_clarkson41.tex
+++ b/advising/faq_clarkson41.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{article}
-\usepackage{graphics,graphicx,array}
+\usepackage{graphics,graphicx,array,url}
 
 \headheight=0in
 \headsep=0.2in
@@ -8,59 +8,153 @@
 \setlength{\evensidemargin}{0cm}
 \setlength{\topmargin}{-0.5in}
 \setlength{\textwidth}{7.0in}
-\setlength{\textheight}{10.0in}
+\setlength{\textheight}{9in}
 
 \begin{document}
 \hfill \includegraphics[width=0.35\textwidth]{siena_phys_astro_print_crop.jpg}
 
 \vspace{0.2cm}
 \begin{center}
-  {\Large {\bf 4/1 Program with Clarkson University \\ Frequently Asked
-      Questions}} 
+{\LARGE {\bf Frequently Asked Questions}} \\
+\medskip
+{\Large {\bf 4/1 Program with Clarkson University}} 
 \end{center}
 \vspace{0.3cm}
 
-\noindent This is good.
+%\noindent This is good.
 
 \begin{itemize}
-\item{{\em What is the 4/1 program?  What happened to Union Graduate College?}
+\item{{\bf {\em What is this document? Where can I get for more information?}} 
 
-Answer}
-\item{{\em When can I start taking classes?}
+This document is meant to be an unofficial guide for students at Siena College
+\emph{considering} the 4/1 Program; it is not a replacement for speaking at
+length with your academic advisor and with the Dean of the School of Engineering
+and Computer Science at Clarkson University, Robert Kozik (bkozik@clarkson.edu).
+At Siena you may also reach out to Prof. John Moustakas (jmoustakas@siena.edu)
+in the Physics Department if you have specific questions not answered below.}
 
-Answer}
-\item{{\em What classes are offered?  What are the prerequisites?}
+\item{{\bf {\em What is the 4/1 program?}}
 
-Answer}
-\item{{\em When are the terms at Clarkson?}
+The 4/1 Program is an articulation between Siena College and Clarkson University
+which allows undergraduate students pursuing their BS in Physics, Environmental
+Science, Computer Science, or Mathematics to take graduate-level courses at the
+Clarkson University Capital Region Campus in Schenectady, NY, giving them a jump
+on obtaining their engineering masters degree in just one additional year
+(hence, the ``4/1 Program'').  You may take up to \underline{three} courses at
+Clarkson as part of your Siena tuition (i.e., without paying any additional
+fees).  In addition, the courses you take at Clarkson may also satisfy your
+upper-level major course requirements, although that depends on your
+department---see your advisor for details.}
 
-Answer}
-\item{{\em How do I apply to the 4/1 program and Clarkson University?}
+\item{{\bf {\em What engineering degrees are available?}}
 
-Answer}
-\item{{\em How do I register for classes?}
+  The three Master of Science (M.S.) programs currently available to students
+  are {\em Electrical Engineering} (MSEE), {\em Engineering and Management
+    Systems} (MSEM), and {\em Energy Systems} (MSE).  Quoting from the program
+  catalog, the MSEE program ``explores technologies and industry opportunities
+  in modern electric machinery, modeling and control of power electronics.''
+  The MSEM program integrates ``engineering and information systems technologies
+  with the core components of an MBA.''  And the MSE degree enables ``students
+  to integrate (1) mechanical/electrical energy related courses, (2) eechanical
+  and electrical fundamental discipline courses, and (3) non-technical courses
+  regarding the impact of environmental, economic, and regulatory issues on
+  energy.''}
 
-Answer}
-\item{{\em How do I get credit on my CAPP report?}
+\item{{\bf {\em When can I start taking classes?}}
 
-Answer}
-\item{{\em Are there research opportunities?}
+  Students can start taking classes as soon as they have sufficient mathematics
+  preparation, typically in their junior or senior year.  Although these are not
+  formal prerequisites, it is strongly recommended that students have completed
+  all three semesters of calculus, differential equations, and either linear
+  algebra or applied mathematics (ideally, both) before tackling these
+  graduate-level courses.  You should also have some experience with {\tt
+    Matlab}/{\tt Simulink}.}
 
-Answer}
-\item{{\em Do I need to know Matlab?}
+\item{{\bf {\em When are the academic terms at Clarkson?}}
 
-Answer}
-\item{{\em How do I get to Clarkson and where can I park?}
+  Unlike Siena, Clarkson is on a 10-week trimester system.  The fall, winter,
+  and spring trimesters are roughly from early September to late November, early
+  January to mid-March, and early April to early June, respectively.  In
+  addition there is typically a summer session of selective classes from
+  mid-June to the end of August.  The classes typically take place during the
+  week in the evening.  The average class size is around 10 students.}
 
-Answer}
-\item{{\em Where can I read the articulation agreement between Siena and
-    Clarkson?} 
+\item{{\bf {\em What classes are offered?  What are the prerequisites?}}
 
-link}
-\item{{\em Whom can I contact for more information?}
+  The courses available varies somewhat from year-to-year, so you should speak
+  with your advisor about which courses are available and whether you are ready
+  to start taking courses at Clarkson.  However, the \emph{first} course Siena
+  students typically take regardless of which program they are pursuing is {\em
+    EER 522: Linear Control Systems}.}
 
-Kozik, Moustakas, any faculty member.}
+%\item{{\bf {\em How do I apply to the program?  What are the minimum
+%      requirements?}} 
+%
+%To apply to the graduate program at Clarkson you must have a minimum 3.0 GPA and
+%you must submit an official \underline{Application
+%  Form}\footnote{http://www.clarkson.edu/artsandsci/documents/graddocuments/CompleteApplicationPacket.pdf}
+%but with some important differences specifically for Siena students.  In
+%addition to the application form, you will also need to submit an official
+%transcript, a personal statement, and three letters of recommendation; the
+%application fee is waived for Siena students.  Note that it is possible---and
+%indeed recommended---that you take at least one class \emph{before} officially
+%applying to Clarkson, so you can get a better idea of the courses and the
+%program itself.  In that case you should get in contact with Dean Kozik about
+%what documentation he needs to receive (typically an unofficial transcript and
+%an application form).}
+  
+\item{{\bf {\em How do I apply to the program?  How do I register for classes?
+      What are the minimum requirements?}}
+
+In order to apply to the program you must submit an \underline{Application
+  Form}\footnote{http://www.clarkson.edu/artsandsci/documents/graddocuments/CompleteApplicationPacket.pdf},
+an official transcript, a personal statement, proof of immunizations, and two
+(not three) letters of recommendation; the application fee is waived for Siena
+students.  Note that a minimum 3.0 GPA is also required.  It is possible---and
+indeed recommended---that you take at least one class \emph{before} officially
+applying to Clarkson, so you can get a better idea of the courses and the
+program itself.  In that case you should get in contact with Dean Kozik about
+what documentation must be received in order to take a trial class.  
+
+In order to register for classes you need to fill out the
+\underline{Registration
+  Form}\footnote{\url{http://clarkson.edu/sas/forms/crc_registration_siena.pdf}}
+specifically designed for Siena students.  The second page of this registration
+form has detailed instructions that you should follow carefully, but basically
+the form will need to be signed by your acadmemic advisor, the Dean of the
+School of Science, and the Siena College registrar (Jim Serbalik, Siena Hall
+102) before it is sent to Clarkson.  Be sure to get these signatures well in
+advance of the start of classes!}
+
+\item{{\bf {\em How do I get credit for these classes on my CAPP report?}}
+
+The classes you take at Clarkson as part of the 4/1 Program are treated by the
+Siena registrar as if they were courses you took at Siena itself.  Therefore,
+once you complete the course at Clarkson and your grade has been submitted, a
+transcript from Clarkson will be sent to Siena so the grade and course can
+appear on your transcript and CAPP report.  This is supposed to happen
+automatically between the two institutions (without a fee!); however, it
+behooves you to follow up by phone call or in person---and with your
+advisor---to make sure all the necessary information has been received and that
+your CAPP report looks correct.}
+
+\item{{\bf {\em Are there research opportunities?}}
+
+Unfortunately there are no research opportunities, although you should speak
+with Dean Kozik early and often about possible paid and unpaid internships.}
+
+%\item{{\bf {\em How do I get to Clarkson and where can I park?}}
+%Answer}
+
+%\item{{\bf {\em Where can I read the articulation agreement between Siena and
+%      Clarkson?}}
+%link}
+
+\item{{\bf {\em What happened to Union Graduate College?}}
+
+  In January 2016 Union Graduate College became the Clarkson University Capital
+  Region Campus, a satellite campus of Clarkson University which is located in
+  Potsdam, NY.}
 \end{itemize}
-
-
+  
 \end{document}
