updated Clarkson FAQ

--- a/advising/faq_clarkson41.tex
+++ b/advising/faq_clarkson41.tex
@@ -46,6 +46,10 @@ fees).  In addition, the courses you take at Clarkson may also satisfy your
 upper-level major course requirements, although that depends on your
 department---see your advisor for details.}
 
+%In the physics department these courses also count toward your
+%required upper-level physics courses (as PHYS400).  See your advisor for
+%details.} 
+
 \item{{\bf {\em What engineering degrees are available?}}
 
   The three Master of Science (M.S.) programs currently available to students
@@ -55,12 +59,12 @@ department---see your advisor for details.}
   in modern electric machinery, modeling and control of power electronics.''
   The MSEM program integrates ``engineering and information systems technologies
   with the core components of an MBA.''  And the MSE degree enables ``students
-  to integrate (1) mechanical/electrical energy related courses, (2) eechanical
+  to integrate (1) mechanical/electrical energy related courses, (2) mechanical
   and electrical fundamental discipline courses, and (3) non-technical courses
   regarding the impact of environmental, economic, and regulatory issues on
   energy.''}
 
-\item{{\bf {\em When can I start taking classes?}}
+\item{{\bf {\em When can I start taking classes at Clarkson?}}
 
   Students can start taking classes as soon as they have sufficient mathematics
   preparation, typically in their junior or senior year.  Although these are not
@@ -74,10 +78,14 @@ department---see your advisor for details.}
 
   Unlike Siena, Clarkson is on a 10-week trimester system.  The fall, winter,
   and spring trimesters are roughly from early September to late November, early
-  January to mid-March, and early April to early June, respectively.  In
-  addition there is typically a summer session of selective classes from
-  mid-June to the end of August.  The classes typically take place during the
-  week in the evening.  The average class size is around 10 students.}
+  January to mid-March, and early April to early June, respectively.  (Please
+  note that only the fall term is aligned with the housing term at Siena;
+  therefore, if you do not live locally and need to take winter and/or spring
+  courses you need to consider where you can live while taking courses at
+  Clarkson.)  In addition there is typically a summer session of selective
+  classes from mid-June to the end of August.  The classes typically take place
+  during the week and in the evening.  The average class size is around 10
+  students.}
 
 \item{{\bf {\em What classes are offered?  What are the prerequisites?}}
 
@@ -134,9 +142,11 @@ once you complete the course at Clarkson and your grade has been submitted, a
 transcript from Clarkson will be sent to Siena so the grade and course can
 appear on your transcript and CAPP report.  This is supposed to happen
 automatically between the two institutions (without a fee!); however, it
-behooves you to follow up by phone call or in person---and with your
+behooves you to follow up in person, by calling, or by emailing---and with your
 advisor---to make sure all the necessary information has been received and that
-your CAPP report looks correct.}
+your CAPP report looks correct.  For physics students, courses taken at Clarkson
+appear on their transcript and CAPP report as PHYS400 ({\em Special Topics in
+  Physics}).}
 
 \item{{\bf {\em Are there research opportunities?}}
 
