--- a/advising/faq_clarkson41.tex
+++ b/advising/faq_clarkson41.tex
@@ -31,7 +31,9 @@ This document is meant to be an unofficial guide for students at Siena College
 length with your academic advisor and with the Dean of the School of Engineering
 and Computer Science at Clarkson University, Robert Kozik (bkozik@clarkson.edu).
 At Siena you may also reach out to Prof. John Moustakas (jmoustakas@siena.edu)
-in the Physics Department if you have specific questions not answered below.}
+in the Physics Department if you have specific questions not answered below.
+Finally, we highly recommend that you confer with Siena student peer who have
+participated in this program and who can related their experience.}
 
 \item{{\bf {\em What is the 4/1 program?}}
 
@@ -52,65 +54,48 @@ department---see your advisor for details.}
 
 \item{{\bf {\em What engineering degrees are available?}}
 
-  The three Master of Science (M.S.) programs currently available to students
-  are {\em Electrical Engineering} (MSEE), {\em Engineering and Management
-    Systems} (MSEM), and {\em Energy Systems} (MSE).  Quoting from the program
-  catalog, the MSEE program ``explores technologies and industry opportunities
-  in modern electric machinery, modeling and control of power electronics.''
-  The MSEM program integrates ``engineering and information systems technologies
-  with the core components of an MBA.''  And the MSE degree enables ``students
-  to integrate (1) mechanical/electrical energy related courses, (2) mechanical
-  and electrical fundamental discipline courses, and (3) non-technical courses
-  regarding the impact of environmental, economic, and regulatory issues on
-  energy.''}
+The three Master of Science (M.S.) programs currently available to students are
+{\em Electrical Engineering} (MSEE), {\em Engineering and Management Systems}
+(MSEM), and {\em Energy Systems} (MSE).  Quoting from the program catalog, the
+MSEE program ``explores technologies and industry opportunities in modern
+electric machinery, modeling and control of power electronics.''  The MSEM
+program integrates ``engineering and/or information systems technologies with
+the core components of an MBA, including Business of Energy Program courses''
+And the MSE degree enables ``students to integrate (1) mechanical/electrical
+energy related courses, (2) mechanical and electrical fundamental discipline
+courses, and (3) non-technical courses regarding the impact of environmental,
+economic, and regulatory issues on energy.''}
 
 \item{{\bf {\em When can I start taking classes at Clarkson?}}
 
-  Students can start taking classes as soon as they have sufficient mathematics
-  preparation, typically in their junior or senior year.  Although these are not
-  formal prerequisites, it is strongly recommended that students have completed
-  all three semesters of calculus, differential equations, and either linear
-  algebra or applied mathematics (ideally, both) before tackling these
-  graduate-level courses.  You should also have some experience with {\tt
-    Matlab}/{\tt Simulink}.}
+Students can start taking classes as soon as they have sufficient mathematics
+preparation, typically in their junior or senior year.  Although these are not
+formal prerequisites, it is strongly recommended that students have completed
+all three semesters of calculus, differential equations, and either linear
+algebra or applied mathematics (ideally, both) before tackling these
+graduate-level courses.  You should also have some experience with {\tt
+  Matlab}/{\tt Simulink}.}
 
 \item{{\bf {\em When are the academic terms at Clarkson?}}
 
-  Unlike Siena, Clarkson is on a 10-week trimester system.  The fall, winter,
-  and spring trimesters are roughly from early September to late November, early
-  January to mid-March, and early April to early June, respectively.  (Please
-  note that only the fall term is aligned with the housing term at Siena;
-  therefore, if you do not live locally and need to take winter and/or spring
-  courses you need to consider where you can live while taking courses at
-  Clarkson.)  In addition there is typically a summer session of selective
-  classes from mid-June to the end of August.  The classes typically take place
-  during the week and in the evening.  The average class size is around 10
-  students.}
+Unlike Siena, Clarkson is on a 10-week trimester system.  The fall, winter, and
+spring trimesters are roughly from early September to late November, early
+January to mid-March, and early April to early June, respectively.  (Please note
+that only the fall term is aligned with the housing term at Siena; therefore, if
+you do not live locally and need to take winter and/or spring courses you need
+to consider where you will live while taking courses at Clarkson.)  In addition,
+there is typically a summer session of selective classes from mid-June to the
+end of August.  The classes typically take place during the week and in the
+evening.  The average class size is around 12 students.}
 
 \item{{\bf {\em What classes are offered?  What are the prerequisites?}}
 
-  The courses available varies somewhat from year-to-year, so you should speak
-  with your advisor about which courses are available and whether you are ready
-  to start taking courses at Clarkson.  However, the \emph{first} course Siena
-  students typically take regardless of which program they are pursuing is {\em
-    EER 522: Linear Control Systems}.}
+The courses available varies somewhat from year-to-year, so you should speak
+with your advisor about which courses are available and whether you are ready to
+start taking courses at Clarkson.  However, the \emph{first} course Siena
+students typically take regardless of which program they are pursuing is {\em
+  EER 522: Linear Control Systems}.}
 
-%\item{{\bf {\em How do I apply to the program?  What are the minimum
-%      requirements?}} 
-%
-%To apply to the graduate program at Clarkson you must have a minimum 3.0 GPA and
-%you must submit an official \underline{Application
-%  Form}\footnote{http://www.clarkson.edu/artsandsci/documents/graddocuments/CompleteApplicationPacket.pdf}
-%but with some important differences specifically for Siena students.  In
-%addition to the application form, you will also need to submit an official
-%transcript, a personal statement, and three letters of recommendation; the
-%application fee is waived for Siena students.  Note that it is possible---and
-%indeed recommended---that you take at least one class \emph{before} officially
-%applying to Clarkson, so you can get a better idea of the courses and the
-%program itself.  In that case you should get in contact with Dean Kozik about
-%what documentation he needs to receive (typically an unofficial transcript and
-%an application form).}
-  
 \item{{\bf {\em How do I apply to the program?  How do I register for classes?
       What are the minimum requirements?}}
 
@@ -118,11 +103,12 @@ In order to apply to the program you must submit an \underline{Application
   Form}\footnote{http://www.clarkson.edu/artsandsci/documents/graddocuments/CompleteApplicationPacket.pdf},
 an official transcript, a personal statement, proof of immunizations, and two
 (not three) letters of recommendation; the application fee is waived for Siena
-students.  Note that a minimum 3.0 GPA is also required.  It is possible---and
-indeed recommended---that you take at least one class \emph{before} officially
-applying to Clarkson, so you can get a better idea of the courses and the
-program itself.  In that case you should get in contact with Dean Kozik about
-what documentation must be received in order to take a trial class.  
+students.  Note that a minimum 3.0 GPA is also strongly recommended.  It is
+possible---and indeed recommended---that you take at least one class
+\emph{before} officially applying to Clarkson, so you can get a better idea of
+the courses and the program itself.  In that case you should get in contact with
+Dean Kozik about what documentation must be received in order to take an initial
+class as a non-matriculated student.
 
 In order to register for classes you need to fill out the
 \underline{Registration
@@ -162,9 +148,10 @@ with Dean Kozik early and often about possible paid and unpaid internships.}
 
 \item{{\bf {\em What happened to Union Graduate College?}}
 
-  In January 2016 Union Graduate College became the Clarkson University Capital
-  Region Campus, a satellite campus of Clarkson University which is located in
-  Potsdam, NY.}
+In January 2016 Union Graduate College became the Clarkson University Capital
+Region Campus, a satellite campus of Clarkson University which is located in
+Potsdam, NY.}
+  
 \end{itemize}
   
 \end{document}
