--- a/advising/faq_clarkson41.tex
+++ b/advising/faq_clarkson41.tex
@@ -32,8 +32,8 @@ length with your academic advisor and with the Dean of the School of Engineering
 and Computer Science at Clarkson University, Robert Kozik (bkozik@clarkson.edu).
 At Siena you may also reach out to Prof. John Moustakas (jmoustakas@siena.edu)
 in the Physics Department if you have specific questions not answered below.
-Finally, we highly recommend that you confer with Siena student peer who have
-participated in this program and who can related their experience.}
+Finally, we highly recommend that you confer with Siena student peers who have
+participated in this program and who can relate their experience.}
 
 \item{{\bf {\em What is the 4/1 program?}}
 
