--- a/advising/faq_clarkson41.tex
+++ b/advising/faq_clarkson41.tex
@@ -32,8 +32,9 @@ length with your academic advisor and with the Dean of the School of Engineering
 and Computer Science at Clarkson University, Robert Kozik (bkozik@clarkson.edu).
 At Siena you may also reach out to Prof. John Moustakas (jmoustakas@siena.edu)
 in the Physics Department if you have specific questions not answered below.
-Finally, we highly recommend that you confer with Siena student peers who have
-participated in this program and who can relate their experience.}
+Finally, you should reach out to your peers at Siena who have already started
+taking classes at Clarkson as part of the 4/1 Program---their experiences are an
+invaluable resource!}
 
 \item{{\bf {\em What is the 4/1 program?}}
 
